--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,3 +10,18 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+.bigCounter{
+    
+    text-align: center;
+    background: black;
+}
+.bigCounter div{
+    display: inline-block;
+    font-size: 70px;
+    line-height: 70px;
+    
+    background-color: black;
+    color: white;
+    padding: 10px;
+    margin: 3px;
+}
