--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,27 +1,44 @@
 
-/* 
+html body {
+    background-color: #f2eeee;
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
-.bigCounter{
-    
+}
+.counter-display {
     text-align: center;
     background: black;
+    margin: 100px;
+    margin-bottom: 35px;
 }
-.bigCounter div{
+@media (max-width: 576px) {
+    .counter-display {
+        width: 60%;
+        margin: 60px auto;
+    }
+}
+.counter-display div {
     display: inline-block;
-    font-size: 70px;
-    line-height: 70px;
-    
-    background-color: black;
+    font-size: 60px;
+    line-height: 60px;
+    background: #101010;
     color: white;
     padding: 10px;
     margin: 3px;
+}
+.button-container {
+    text-align: center;
+    margin-bottom: 10px;
+}
+button {
+    margin-left: 5px;
+}
+button:active {
+    border-top: 3px solid grey;
+    border-left: 3px solid grey;
+}
+input {
+    width: 100px;
+    background-color: #f0f0f0;
+    text-align: right;
+    direction: rtl;
+    padding-right: 8px;
 }
